# Cargo.toml
[package]
name = "gcloud-provision"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "fs", "io-util", "time"] }
hyper = { version = "1" }
http = "1"
tower = { version = "0.4", features = ["limit"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
regex = "1"
once_cell = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
bytes = "1"
reqwest = "0.12.23"
chrono = "0.4.41"
